Add new feature and fix bugs

--- a/our-story.html
+++ b/our-story.html
@@ -12,14 +12,18 @@
 <body>
 
     <header>
-        <nav>
-            <div class="logo">Kosala Ayurvedic</div>
+        <div class="logo">Kosala Ayurvedic</div>
+        <nav class="main-nav">
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="products.html">Our Oils</a></li>
                 <li><a href="our-story.html">Our Story</a></li>
             </ul>
         </nav>
+        <button class="btn-mobile-nav">
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon-mobile-nav" name="menu-outline" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon-mobile-nav" name="close-outline" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg>
+        </button>
     </header>
 
     <main>
@@ -35,7 +39,7 @@
                 <blockquote>
                     "For years, I saw my friends and family struggle with hair problems caused by modern products full of chemicals. I knew the secrets to healthy hair were in the recipes my grandmother taught me, using pure herbs from our own garden in Kerala. Kosala Ayurvedic is my way of sharing that tradition and helping everyone rediscover the true, natural beauty of their hair."
                 </blockquote>
-                <p class="founder-name">- Sabeera Abdul Jaleel</p>
+                <p class="founder-name">- Your Mom's Name Here</p>
             </section>
 
             <hr class="story-divider">
@@ -84,6 +88,6 @@
             <p class="copyright">&copy; 2025 Kosala Ayurvedic. All Rights Reserved.</p>
         </div>
     </footer>
-
+    <script src="combo-builder.js"></script>
 </body>
 </html>
