--- a/index.html
+++ b/index.html
@@ -12,14 +12,18 @@
 <body>
 
     <header>
-        <nav>
-            <div class="logo">Kosala Ayurvedic</div>
+        <div class="logo">Kosala Ayurvedic</div>
+        <nav class="main-nav">
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="products.html">Our Oils</a></li>
                 <li><a href="our-story.html">Our Story</a></li>
             </ul>
         </nav>
+        <button class="btn-mobile-nav">
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon-mobile-nav" name="menu-outline" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon-mobile-nav" name="close-outline" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg>
+        </button>
     </header>
 
     <main>
@@ -102,6 +106,6 @@
             <p class="copyright">&copy; 2025 Kosala Ayurvedic. All Rights Reserved.</p>
         </div>
     </footer>
-
+    <script src="combo-builder.js"></script>
 </body>
 </html>
